# pcl_people_detection

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
msg/: peopledata.h  peopledata.h~  peopledata.msg  peopledata.msg~
src/: main_ground_based_people_detection.cpp  main_ground_based_people_detection.cpp~  topictest.cpp
